# agihawk

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/agihawk/: ctrl_feedback_publisher.hpp  px4_pilot.hpp  ros_eigen.hpp  ros_setpoint.hpp  ros_traj_visualizer.hpp  time.hpp
include/agihawk/bridge/: px4_bridge.hpp  ros_bridge.hpp  rotors_bridge.hpp
launch/simulation/: base_quad_simulation.launch  run_px4_simulation.launch  run_rotors_simulation.launch  run_rqt_gui.launch
parameters/: px4_sim_pilot.yaml  rotors_sim_pilot.yaml
parameters/agiparams/: feedthrough.yaml  px4_mpc.yaml
parameters/quads/: iris.yaml  kingfisher.yaml
resources/gazebo_files/rotors/models/: hummingbird_base.xacro  hummingbird_model.gazebo  kingfisher_base.xacro  kingfisher_model.gazebo
resources/mavros_files/: px4_config.yaml
resources/rviz/: px4_simulation.rviz  rotors_simulation.rviz
src/: ctrl_feedback_publisher.cpp  node.cpp  px4_pilot.cpp  ros_traj_visualizer.cpp
src/bridge/: px4_bridge.cpp  ros_bridge.cpp  rotors_bridge.cpp
