<?xml version="1.0"?>
<package format="2">
  <name>agihawk</name>
  <version>0.0.0</version>
  <description>The agihawk package</description>

  <maintainer email="chao.qin@mail.utoronto.ca">chao</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>agilib</depend>
  <depend>agiros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mavros_msgs</depend>
</package>
